[package]
name = "blockchain-indexer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Blockchain indexer for price feeds"
license = "MIT"

[dependencies]
# Ethereum
tiny-keccak = "2.0.2"
byteorder = "1.4.3"
ethabi = "18.0.0"
ethers = { version = "2.0", features = ["abigen"] }
rlp = "0.5.2"
impl-rlp = "0.3.0"

# Solana
solana-client = "1.17"
solana-sdk = "1.17"
zeroize = { version = "1.4.0", features = ["derive"] }
curve25519-dalek = "3.2.1"
elliptic-curve = "0.13.7"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
dotenvy = "0.15"

# Other
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }